css/styles.css
html {
    box-sizing: border-box;
}
:root {
    --primary-text-color: #757575;
    --title-text-color: #212121;
    --link-text-color: #2196F3;
    --logo-text-studio-color: #000000;
    --accent-text-color: #FFFFFF;
    --primary-background-color: #FFFFFF;
    --background-footer: #2F303A;
    --button-color: #2196F3;
    --secondary-background-color: #F5F4FA;
    --list-background-color: #EEEEEE;
    --border-color: #ECECEC;
    --icon-color: #AFB1B8;
}

.container {
    width: 1200px;
    padding-left: 15px;
    padding-right: 15px;
    margin-left: auto;
    margin-right: auto;
}
.body {
    background-color: var(--primary-background-color);
    color: var(--primary-text-color);
    font-family: Roboto, sans-serif;
    font-size: 14px;
    margin: 0px;
}
ul {
    padding: 0;
    margin: 0;
}
h1,
h2,
h3,
h4,
h5,
h6,
p {
    margin: 0;
}

/*Header*/
.header-container {
border-bottom: 1px;
border: var(--border-color);
}
.header-menu {
    border-bottom: 1px solid var(--border-color);
}
.nav-container {
display: flex;
}
.section {
    padding-top: 94px;
    padding-bottom: 94px;
}
.site-nav {
    display: flex;
    align-items: center;
    margin-right: auto;
}
.list {
    display: flex;
    align-items: center;
}
.logo {
    color: var(--link-text-color);
    font-family: 'Raleway';
    font-weight: 700;
    font-size: 26px;
    line-height: 1.19;
    letter-spacing: 0.03em;
    text-decoration: none;
    padding-top: 24px;
    padding-bottom: 24px;
    margin-right: 93px;
}

.studio {
    color: var(--logo-text-studio-color);
    font-family: 'Raleway';
    font-weight: 700;
    font-size: 26px;
    line-height: 1.19;
    letter-spacing: 0.03em;
    text-decoration: none;
}

.list {
    list-style-type: none;
    padding: 0px;
    margin: 0px;
}
.nav-site-contact {
    margin-right: auto;
    margin-left: auto;
}
.list-contact {
    margin-right: auto;
    margin-left: auto;
}

.list .item {
    margin-right: 50px;
}
.list .item:last-child {
    margin-right: 0px;
}
.title {
    color: var(--title-text-color);
    font-family: inherit;
    font-weight: 500;
    line-height: 1.14;
    letter-spacing: 0.02em;
    text-decoration: none;
    padding-top: 32px;
    padding-bottom: 32px;
}

.title:hover,
.title:focus {
    color: var(--link-text-color);
}
.active-title {
    color: var(--link-text-color);
    font-family: inherit;
    font-weight: 500;
    line-height: 1.14;
    letter-spacing: 0.02em;
    text-decoration: none;
    padding-top: 32px;
    padding-bottom: 32px;
}
.list .item:first-child {
    margin-left: 0px;
}
.list .item:last-child {
    margin-right: 0px;
}
/*Contact links*/
.link {
    color: var(--primary-text-color);
    font-family: inherit;
    text-decoration: none;
    font-weight: 500;
    font-size: 14px;
    line-height: 1.14;
    letter-spacing: 0.02em;
    padding-top: 32px;
    padding-bottom: 32px;
}
.link-contact {
    margin-right: 50px;
}
.link-contact:last-child {
    margin-right: 0px;
}
.link:hover,
.link:focus,
.contact:hover,
.contact:focus {
    color: var(--link-text-color);
}
.studio-icon {
    fill: currentColor;
    margin-right: 10px;
}
.studio-icon:hover,
.studio-icon:focus {
    fill: currentColor;
}


/*Hero*/
.hero {
    text-align: center;  
    padding: 200px 0;
    background-color: var(--background-footer);
    max-width: 1600px;
    height: 600px;
    margin-left: auto;
    margin-right: auto;
    background-image: linear-gradient(to right,
            rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
    url(../images/hero.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}


.hero-title {
    color: var(--accent-text-color);
    font-weight: 900;
    font-size: 44px;
    line-height: 1.36;
    letter-spacing: 0.06em;
    text-transform: uppercase;
    text-align: center;
    width: 696px;
    margin-top: 0px;
    margin-bottom: 40px;
    margin-right: auto;
    margin-left: auto;
}

.hero-button {
    color: var(--accent-text-color);
    background-color: var(--link-text-color);
    cursor: pointer;
    font-family: inherit;
    font-weight: 700;
    font-size: 16px;
    line-height: 1.88;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    border-radius: 4px;
    letter-spacing: 0.06em;
    border: transparent;
    padding: 10px 32px;
}

/*Advantages*/
.feature-section {
    padding-top: 94px;
    padding-bottom: 94px;
}
.advantages-list  {
display: flex;
}
.feature-iconfill {
    width: 270px;
    height: 120px;
    margin-bottom: 30px;
    background-color: var(--secondary-background-color);
    border-radius: 4px;
}
.feature-icons {
    display: flex;
    align-items: center;
    justify-content: center;
}
.feature-item {
    padding: 0px;
    margin-right: 30px;
}  
.feature-item:last-child {
    margin-right: 0px;
}
.feature-list {
    width: 270px;
}
.feature-title {
    color: var(--title-text-color);
    font-weight: 700;
    line-height: 1.14;
    font-size: 14px;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    margin-bottom: 10px;
}
.feature-text {
    line-height: 1.71;
    letter-spacing: 0.03em;
}
/*Activity*/
.activity-section {
    padding-bottom: 94px;
    margin-top: 0px;
}
.activity-items {
    display: flex;
    justify-content: center;
}
.section-title {
    color: var(--title-text-color);
    font-weight: 700;
    font-size: 36px;
    line-height: 1.17;
    text-align: center;
    letter-spacing: 0.03em;
    margin-top: 0px;
    margin-bottom: 50px;
}
.activity-list:not(:last-child) {
    margin-right: 30px;
}

/*Team*/
.team {
    background-color: var(--secondary-background-color);
    padding-top: 94px;
    padding-bottom: 94px;
    margin-bottom: 0px;
}
.team .section-title {
    margin-bottom: 50px;
}
.team-list {
    background-color: var(--primary-background-color);
}
.team-list:not(:last-child) {
    margin-right: 30px;
}
.team .section-title {
    margin-bottom: 50px;
}
.team-list img {
    display: block;
    max-width: 100%;
    height: auto;
}
.team-description {
    margin-top: 30px;
    margin-bottom: 30px;
}
.team-name {
    color: var(--title-text-color);
    font-family: inherit;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.19;
    text-align: center;
    letter-spacing: 0.03em;
    margin-bottom: 10px;
}
.team-text {
    font-family: inherit;
    font-size: 16px;
    line-height: 1.19;
    text-align: center;
    letter-spacing: 0.03em;
    margin-bottom: 16px;
}
.socialicons-list {
    margin-left: 32px;
    margin-bottom: 30px;
}
.social-icons {
    text-decoration: none;
    fill: currentColor;
}
.team-icons {
    margin-right: 10px;
    text-decoration: none;
}
.team-icons:last-child {
margin-right: 0px;
}
.social-link {
    display: block;
    justify-content: center;
    align-items: center;
    width: 44px;
    height: 44px;
    border-radius: 50px;
    padding: 12px;
    fill: var(--icon-color);
}
.social-link:hover,
.social-link:focus {
    border-radius: 50px;
    fill: var(--accent-text-color);
    background-color: #2196F3;
}
/*Clients-section*/
.client-section {
    padding-top: 94px;
    padding-bottom: 94px;
    margin-bottom: 0px;
}
.clients-link {
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    width: 100%;
    height: 100%;
}
.clients-link:hover,
.clients-link:focus {
    fill: currentColor;
    border: 1px solid #2196F3;
    border-radius: 4px;
}
.client-icons {
    margin-right: 30px;
    width: 170px;
    height: 92px;
    display: flex;
    border: 1px solid var(--icon-color);
    border-radius: 4px;
}
.client-icons:last-child {
    margin-right: 0px;
}
/*Footer*/
.footer-section {
    background-color: var(--background-footer);
    padding-top: 60px;
    padding-bottom: 60px;
}
.footer-ancors {
    display: flex;
    align-items: baseline;
}
.footer-contact {
    margin-right: 70px;
}
.footer-section .logo {
    padding: 0;
    margin-bottom: 20px;
    margin-top: 0px;
    margin-right: 0;
}

.footer-studio {
    color: var(--primary-background-color);
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 700;
    font-size: 26px;
    line-height: 1.19;
    letter-spacing: 0.03em;
}
.footer-address {
    color: var(--accent-text-color);
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 1.71;
    letter-spacing: 0.03em;
    margin-bottom: 9px;
}
address .list {
display: flex;
flex-direction: column;
align-items: flex-start;
}

.contact-list:not(:last-child) {
    margin-bottom: 9px;
}
.contact {
    color: var(--accent-text-color);
    opacity: 0.6;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 1.71;
    letter-spacing: 0.03em;
    text-decoration: none;
}
.footer-title {
    color: var(--accent-text-color);
    margin-bottom: 20px;
    font-weight: 700;
        font-size: 14px;
        line-height: 1.14;
        letter-spacing: 0.03em;
        text-transform: uppercase;
        text-decoration: none;
}

/*Portfolio*/
.portfolio-section {
    padding-top: 94px;
    padding-bottom: 94px;
}
.profile-btn-list {
    display: flex;
    justify-content: center;
    margin-bottom: 50px;
}
.profile-btn {
    background-color: var(--secondary-background-color);
    color: var(--title-text-color);
    cursor: pointer;
    font-family: inherit;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.63;
    text-align: center;
    letter-spacing: 0.03em;
    margin-left: 8px;
    padding: 6px 22px;
    border-radius: 4px;
    border: var(--secondary-background-color)
}

.profile-btn:hover,
.profile-btn:focus {
    color: var(--accent-text-color);
    background-color: var(--link-text-color);
}

.current-button {
    color: var(--accent-text-color);
    background-color: var(--link-text-color);
    font-family: inherit;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.63;
    text-align: center;
    letter-spacing: 0.03em;
    display: inline-block;
    padding: 6px 22px;
    border-radius: 4px;
    border: var(--link-text-color);
}
.portfolio-container {
    margin: 0px;
    padding: 0px;
}
.portfolio-container>.list {
    display: flex;
    flex-wrap: wrap;
}
.portfolio-list {
    width: 370px;
    margin-right: 30px;
    margin-bottom: 30px;
    border: 1px;
    border: var(--list-background-color);
    border-bottom: 1px solid var(--list-background-color);
}
.portfolio-list:nth-child(3n) {
    margin-right: 0px;
}
.portfolio-list:nth-last-child(-n+3) {
margin-bottom: 0px;
}
.portfolio-list:hover,
.portfolio-list:focus {
box-shadow: 1px 1px 1px 1px var(--list-background-color);
}
.portfolio-list a img {
    display: block;
    max-width: 100%;
    height: auto;
}

.portfolio-ancor {
    text-decoration: none;
}
.portfolio-inscription {
    padding: 20px 24px;
    border-bottom: 1px solid var(--list-background-color);
    border-right: 1px solid var(--list-background-color);
    border-left: 1px solid var(--list-background-color);
}
.portfolio-title {
    color: var(--title-text-color);
    font-family: inherit;
    font-weight: 700;
    font-size: 18px;
    line-height: 2;
    letter-spacing: 0.06em;
    text-decoration: none;
    margin-bottom: 4px;
}

.portfolio-text {
    color: var(--primary-text-color);
    font-family: inherit;
    font-size: 16px;
    line-height: 1.88;
    letter-spacing: 0.03em;
    text-decoration: none;
}

